--- a/02_OpticalStyleWebsite/css/style.css
+++ b/02_OpticalStyleWebsite/css/style.css
@@ -21,7 +21,7 @@ body{
 
 /* HEADER */
 header{
-    height: 16vh;
+    min-height: 16vh;
     padding: 0 50px;
     color: var(--dark-color);
     font-weight: 400;
@@ -36,7 +36,7 @@ header{
 
 .menu a{
     color: var(--dark-color);
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: 400;
     text-decoration: none;
     padding: 0 10px;
@@ -44,7 +44,7 @@ header{
 }
 
 .show-menu, .hide-menu{
-    font-size: 30px;
+    font-size: 2.7em;
     cursor: pointer;
     display: none;
     transition: 0.4s;
@@ -114,6 +114,7 @@ div#slider figure {
 #slide-glases div.conteiner{
     background-color: var(--light-color);
     border: 3px solid var(--primary-light-color);
+    box-shadow: 5px 5px 15px var(--primary-light-color);
     border-radius: 15px;
     display: flex;
     flex-wrap: wrap;
